2024-04-29  b.s. <newbie-02 (at) gmx (dot) de>

	* functions.c (gnumeric_round, gnumeric_trunc, gnumeric_roundup)
	(gnumeric_rounddown): cover denormals and excessive digits.

2024-02-11  Morten Welinder <terra@gnome.org>

	* Release 1.12.57

2023-11-02  Morten Welinder <terra@gnome.org>

	* Release 1.12.56

2023-02-02  Morten Welinder <terra@gnome.org>

	* Release 1.12.55

2023-01-19  Morten Welinder <terra@gnome.org>

	* Release 1.12.54

2022-09-17  Morten Welinder <terra@gnome.org>

	* Release 1.12.53

2022-08-19  Morten Welinder  <terra@gnome.org>

	* functions.c (gnumeric_round): Handle some edge cases.  See #661.

2022-04-18  Morten Welinder <terra@gnome.org>

	* Release 1.12.52

2022-01-20  Morten Welinder <terra@gnome.org>

	* Release 1.12.51

2021-06-10  Morten Welinder <terra@gnome.org>

	* Release 1.12.50

2021-03-14  Morten Welinder <terra@gnome.org>

	* Release 1.12.49

2020-08-12  Morten Welinder <terra@gnome.org>

	* Release 1.12.48

2020-05-09  Morten Welinder <terra@gnome.org>

	* Release 1.12.47

2019-11-06  Morten Welinder <terra@gnome.org>

	* Release 1.12.46

2019-05-20  Morten Welinder <terra@gnome.org>

	* Release 1.12.45

2018-11-24  Morten Welinder <terra@gnome.org>

	* Release 1.12.44

2018-11-19 Andreas J. Guelzow <aguelzow@pyrshep.ca>

	* functions.c (help_lambertw): fix formatting

2018-08-19  Morten Welinder <terra@gnome.org>

	* Release 1.12.43

2018-08-09  Morten Welinder <terra@gnome.org>

	* Release 1.12.42

2018-05-07  Morten Welinder <terra@gnome.org>

	* Release 1.12.41

2018-04-29  Morten Welinder <terra@gnome.org>

	* Release 1.12.40

2018-03-13  Morten Welinder <terra@gnome.org>

	* Release 1.12.39

2018-02-26  Morten Welinder  <terra@gnome.org>

	* functions.c (gnumeric_munit): Return the right error if we get a
	size between 0 and 1.

2017-12-28  Morten Welinder <terra@gnome.org>

	* Release 1.12.38

2017-12-01  Morten Welinder <terra@gnome.org>

	* Release 1.12.37

2017-11-22  Morten Welinder  <terra@gnome.org>
